fixed layout issue for case studies

--- a/css/main.css
+++ b/css/main.css
@@ -80,16 +80,6 @@ a:active {
   overflow: hidden;
 }
 
-.caseStudy_padding {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  padding: 200px 160px;
-  gap: 160px;
-  position: relative;
-  overflow: hidden;
-}
-
 .section_short {
   display: flex;
   flex-direction: column;
@@ -561,9 +551,6 @@ a:active {
   .section_padding {
     padding: 200px 160px;
   }
-  .caseStudy_padding {
-    padding: 200px 64px;
-  }
 
   .content-container {
     flex-direction: column;
@@ -594,10 +581,6 @@ a:active {
 
   .section_padding {
     padding: 200px 64px;
-  }
-
-  .caseStudy_padding {
-    padding: 200px 32px;
   }
 
   .section_short {
